Bug 455358 - Safe assert when moving animated transform mask
Summary: Safe assert when moving animated transform mask
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-15 18:28 UTC by Alvin Wong
Modified: 2022-06-29 22:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2022-06-15 18:28:18 UTC
SUMMARY



STEPS TO REPRODUCE
1. Create a layer, draw something on it and add a transform mask to it (or open the test file from bug 455349)
2. Move the transform mask with the move tool

OBSERVED RESULT

SAFE ASSERT (krita): "mergeResult" in file C:/Packaging/workspace/Krita_Stable_Windows_Build/krita/libs/ui/tool/strokes/move_stroke_strategy.cpp, line 306

SOFTWARE/OS VERSIONS
Windows: Windows 10

ADDITIONAL INFORMATION
Nightly b846a63f2a (stable)
Comment 1 Alvin Wong 2022-06-15 18:34:12 UTC
I forgot to say add a value keyframe from the animation curves docker in step 1...
Comment 2 Eoin O'Neill 2022-06-29 03:09:41 UTC
Git commit aed62045caae675a38e5e9df0bb10bb05aac9284 by Eoin O'Neill.
Committed on 29/06/2022 at 03:08.
Pushed by eoinoneill into branch 'master'.

Changed logic to prevent undo merge when moving an animated transform
mask.

Animation keyframe undos currently can't be merged, but it's not
necessary currently and does not affect undo stack. Might be worth
implementing better merging logic later though as it might smooth
out performance long term.

M  +1    -3    libs/ui/tool/strokes/move_stroke_strategy.cpp

https://invent.kde.org/graphics/krita/commit/aed62045caae675a38e5e9df0bb10bb05aac9284
Comment 3 Eoin O'Neill 2022-06-29 22:16:57 UTC
Git commit 359a67e3532a859d9662d7ad824b3aae9aeb0654 by Eoin O'Neill.
Committed on 29/06/2022 at 22:15.
Pushed by eoinoneill into branch 'krita/5.1'.

Changed logic to prevent undo merge when moving an animated transform
mask.

Animation keyframe undos currently can't be merged, but it's not
necessary currently and does not affect undo stack. Might be worth
implementing better merging logic later though as it might smooth
out performance long term.
(cherry picked from commit aed62045caae675a38e5e9df0bb10bb05aac9284)

M  +1    -3    libs/ui/tool/strokes/move_stroke_strategy.cpp

https://invent.kde.org/graphics/krita/commit/359a67e3532a859d9662d7ad824b3aae9aeb0654