Changed logic to prevent undo merge when moving an animated transform mask.

Animation keyframe undos currently can't be merged, but it's not
necessary currently and does not affect undo stack. Might be worth
implementing better merging logic later though as it might smooth
out performance long term.

BUG:455358